2020-12-13 Luigi Scarso <luigi.scarso@gmail.com> 
    * fixed Hyphenation issue regarding frozen glyph nodes (M.F. Krüger)

2020-12-12 Luigi Scarso <luigi.scarso@gmail.com> 
    * fixed  luatex segfault with huge romannumeral overfull (H. Hagen)
    * automake (GNU automake) 1.16.3

2020-11-08 Luigi Scarso <luigi.scarso@gmail.com> 
    * convert assert(is_simple_character(wordstart)) to tex error

2020-10-30 Luigi Scarso <luigi.scarso@gmail.com> 
    * fixed a typo in w32 code in errors.c (A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed a typo in ChangeLog (thanks to A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * patch for openin_any = p (A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * Lua 5.3.6

2020-08-21 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed a couple of bugs in metapost (see ChangeLog).

2020-07-26 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed: \tracinglostchars>=3 is an error (no fatal error)

2020-07-26 Luigi Scarso <luigi.scarso@gmail.com>
    * New value for \tracinglostchars: \tracinglostchars>=3 is a fatal error 

2020-07-12 Luigi Scarso <luigi.scarso@gmail.com>
    * Original reports:
     https://tex.stackexchange.com/questions/551313/
     https://tug.org/pipermail/tex-live/2020-June/045876.html
 
    This will probably be fixed by DEK in the 2021 tuneup in a different
    way (so we'll have to remove or alter this change), but the interaction
    sequence in the reports above causes a segmentation fault in web2c -
    writing to the closed \write15 stream because we wrongly decrement
    selector from 16 to 15 in term_input, due to the lack of this check in
    recursive error() call (K. Berry)


2020-07-04 Luigi Scarso <luigi.scarso@gmail.com>
    * little endian variants for readers. (HH)
    * The keyword \type {norule} will hide the rule with the above variants while
      keeping the rule related spacing.  (HH)

2020-06-21 Luigi Scarso <luigi.scarso@gmail.com>